Fix item info on mobile layout

--- a/src/views/home/style.css
+++ b/src/views/home/style.css
@@ -1117,10 +1117,19 @@
 .card-attr span:nth-of-type(even) {
     text-align: right;
 }
-.card-attr div {
+.card-attr > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.card-attr .item-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.card-attr .item-info span {
+    font-size: .75em;
+    opacity: .75;
 }
 .mobile {
     display: block;
